--- a/index.html
+++ b/index.html
@@ -51,32 +51,32 @@
             </p>
           </div>
         </div>
-        <div>
+        <div class="gridContent">
           <h1>Our creations</h1>
-          <span>
-            <img src="images/desktop/image-deep-earth.jpg" alt="" />
-          </span>
-          <span>
+          <div>
+            <img src="images/mobile/image-deep-earth.jpg" alt="" />
+          </div>
+          <div>
             <img src="images/desktop/image-night-arcade.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-soccer-team.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-grid.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-from-above.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-pocket-borealis.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-curiosity.jpg" alt="" />
-          </span>
-          <span>
+          </div>
+          <div>
             <img src="images/desktop/image-fisheye.jpg" alt="" />
-          </span>
+          </div>
           <button>See all</button>
         </div>
       </div>
